fixed overflow input

--- a/src/styles/Landing.module.scss
+++ b/src/styles/Landing.module.scss
@@ -583,6 +583,10 @@ main {
         .content {
           .inputs {
             grid-template-columns: 1fr;
+            input,
+            select {
+              max-width: 74vw;
+            }
           }
         }
       }
